# kubos

./: .gitignore  Cargo.toml  Xargo.toml  build_all.sh  build_apps.sh  env.sh  mkupdate.sh
.cargo/: config
apis/system-api/: Cargo.toml
apis/system-api/src/: config.rs  logger.rs
apis/telemetry-db-api/src/: lib.rs  models.rs
clients/kubos-file-client/src/: main.rs
clients/kubos-shell-client/: Cargo.toml
clients/kubos-shell-client/src/: main.rs
libs/cbor-protocol/: Cargo.toml
libs/cbor-protocol/src/: lib.rs
libs/channel-protocol/: Cargo.toml
libs/channel-protocol/src/: parsers.rs
libs/comms-service/: Cargo.toml
libs/comms-service/src/: config.rs  lib.rs  packet.rs  service.rs  spacepacket.rs  telemetry.rs
libs/file-protocol/: Cargo.toml
libs/file-protocol/src/: parsers.rs  protocol.rs  storage.rs
libs/shell-protocol/: Cargo.toml
libs/shell-protocol/src/: process.rs  protocol.rs
libs/shell-protocol/src/messages/: error.rs  exit.rs  kill.rs  list.rs  pid.rs  spawn.rs  stderr.rs  stdin.rs  stdout.rs
services/file-service/: Cargo.toml
services/file-service/src/: lib.rs
services/kubos-service/: Cargo.toml
services/kubos-service/src/: udp_service.rs
services/local-comms-service/src/: main.rs
services/scheduler-service/: Cargo.toml
services/scheduler-service/src/: app.rs  error.rs  lib.rs  main.rs  scheduler.rs  schema.rs  task.rs  task_list.rs
services/shell-service/src/: lib.rs
services/telemetry-service/: Cargo.toml  README.md
services/telemetry-service/src/: main.rs  schema.rs  udp.rs
