[package]
name = "kubos-system"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
log4rs = { version = "0.8.3", default-features = false, features = ["console_appender", "pattern_encoder", "threshold_filter"] }
log4rs-syslog = "3.0"
log = "^0.4.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[dev-dependencies]
tempfile = "3"
