[package]
name = "scheduler-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[features]
http = ["kubos-service/http"]
udp = ["kubos-service/udp"]

[dependencies]
chrono = { version = "0.4.10", default-features = false }
failure = { version = "0.1.2", default-features = false }
juniper = { version = "0.14.2", default-features = false }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
# reqwest = { version = "0.10.1", default-features = false, features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false }
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"]}
syslog = { version = "4.0", default-features = false }
tokio = { version = "0.2", default-features = false, features = ["rt-core", "rt-threaded", "time", "process", "sync", "macros", "net"] }
futures = { version = "=0.3.16", default-features = false }
futures-task = { version = "=0.3.16" }
libc = "=0.2.66"
backtrace = "=0.3.50"
mio = "=0.6.22"
git-version = "0.3"
clock-timer = { path = "../../../../linux-m2s/projects/horus/clock-timer" }
flat-db = { path = "../../../../linux-m2s/projects/horus/flat-db" }

[dev-dependencies]
tempfile = "3.0"
utils = { path = "../../utils" }


